--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "/test/"
   ],
   "dependencies": {
-    "lodash": "~4.17.2"
+    "lodash-import": "DigElements/lodash-import#~1.0.0"
   },
   "devDependencies": {
     "polymer": "Polymer/polymer#^1.7.0",
