Revert "Test using lodash-import for lodash dependency."
This reverts commit c3b5f8983475359907df23824db06bc3e580c812.

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "/test/"
   ],
   "dependencies": {
-    "lodash-import": "DigElements/lodash-import#~1.0.0"
+    "lodash": "~4.17.2"
   },
   "devDependencies": {
     "polymer": "Polymer/polymer#^1.7.0",
